# horse_racing

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  main.py  persistence.py  predict.py  races.py  schemas.py  twinspires.py
data/: README.md  ingest.py  parse_brisnet.py  parse_entries.py  parse_params.py  parse_results.py  schema.py
frontend/: app.js  index.html  style.css
model/: betting.py  calibration.py  diagnostics.py  evaluate.py  experiment.py  feature_pipeline.py  features.py  inference.py  paths.py  predict.py  split.py  sweep.py  train.py
model/artifacts/: xgb_pipeline_v1.joblib
notebooks/: 01_eda.ipynb  calibration_diagnostics.ipynb
scripts/: ingest_brisnet.py  post_staged_races.py  preload_from_training.py
tests/api/: conftest.py  test_persistence.py  test_races.py  test_twinspires.py
tests/unit/: test_betting.py  test_evaluate.py  test_feature_pipeline.py  test_noisy_live_odds.py  test_parse_brisnet.py  test_train.py
