[project]
name = "horse-racing"
version = "0.1.0"
description = "Horse racing prediction system"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "joblib",
    "numpy",
    "polars",
    "pydantic",
    "scikit-learn>=1.8",
    "uvicorn",
    "xgboost>=3.2",
]

[project.optional-dependencies]
train = [
    "matplotlib",
    "mlflow",
    "openpyxl",
    "optuna",
    "pandas",
    "plotly",
    "pyarrow",
]
dev = [
    "httpx",
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["data*", "model*", "api*"]

[tool.black]
preview = true
enable-unstable-feature = ["hug_parens_with_braces_and_square_brackets"]
color = true
